1、修改设置自定义背景不成功BUG 2、修改UIAlertView 实例化过程 3、增加自定义样式效果图

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="UIAlertView-设置无title单按钮"/>
+
+    <Button
+        android:id="@+id/btn_alertCustom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UIAlertView-自定义样式"/>
 </LinearLayout>
